#119: Cleanup old torrent-frostwire references