@@ -396,9 +396,6 @@
                         --add-opens player.popcorn/com.github.yoep.player.popcorn.player=ALL-UNNAMED
                         --add-opens player.popcorn/com.github.yoep.player.popcorn.services=ALL-UNNAMED
                         --add-opens player.popcorn/com.github.yoep.player.popcorn.utils=ALL-UNNAMED
-                        --add-opens torrent.frostwire/com.github.yoep.torrent.frostwire.model=ALL-UNNAMED
-                        --add-opens torrent.frostwire/com.github.yoep.torrent.frostwire.wrappers=ALL-UNNAMED
-                        --add-opens torrent.frostwire/com.github.yoep.torrent.frostwire=ALL-UNNAMED
                         --add-opens video.javafx/com.github.yoep.video.javafx=ALL-UNNAMED
                         --add-opens video.vlc/com.github.yoep.video.vlc.discovery=ALL-UNNAMED
                         --add-opens video.vlc/com.github.yoep.video.vlc=ALL-UNNAMED
